tests/e2e/string_iteration3.story
a = "abc"

foreach a as i, j, k
   b = i
